[package]
name = "myrs"
version = "0.1.0"
edition = "2021"
[lib]
proc-macro=true
[dependencies]
bplustree = "0.1.0"
getset = "0.1.2"
json = "0.12.4"
paste = "1.0.15"
rust_decimal = "1.35.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = { version = "0.21.0", features = ["derive"] }
